# PixEngine

./: CMakeLists.txt  LICENSE  NOTICE.txt  README.md
engine/assets/: Audio.cfg  Fonts.cfg  Textures.cfg  credit.txt
engine/assets/icon/: app.rc
engine/config/: Keys.cfg
engine/include/: Arrow.h  AudioManager.h  BaseState.h  Character.h  Engine.h  Entity.h  EntityManager.h  EventManager.h  FontManager.h  Game.h  HUDManager.h  MathUtils.h  Player.h  Rectangle.h  ResourceManager.h  SharedContext.h  Skeleton.h  State.h  StateManager.h  State_EngineIntro.h  State_EngineMenu.h  State_Game.h  State_GameOver.h  State_Intro.h  State_Paused.h  State_Store.h  TextureManager.h  UIButton.cpp  UIButton.h  UIElement.h  UILayer.h  UILayer_EngineMenu.cpp  UILayer_EngineMenu.h  UIManager.h  Utilities.h  Window.h
engine/resources/: app.aps
engine/source/: Arrow.cpp  Character.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp  Game.cpp  HUDManager.cpp  Main.cpp  Player.cpp  Rectangle.cpp  Skeleton.cpp  StateManager.cpp  State_EngineIntro.cpp  State_EngineMenu.cpp  State_Game.cpp  State_GameOver.cpp  State_Intro.cpp  State_Paused.cpp  State_Store.cpp  UIButton.cpp  UILayer.cpp  UILayer_EngineMenu.cpp  UIManager.cpp  Window.cpp
game/assets/maps/: Map.txt
game/config/: Keys.cfg  Textures.cfg
game/include/: Player.h  State_Game.cpp  State_Game.h  State_GameIntro.h  State_GameMenu.h  Tile.h  TileMap.h  UILayer_GameMenu.h  World.cpp  World.h
game/source/: Player.cpp  State_Game.cpp  State_GameIntro.cpp  State_GameMenu.cpp  TileMap.cpp  UILayer_GameMenu.cpp  World.cpp
